--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-VITE_API_BASE_URL="http://localhost:3000/"
-VITE_SIGNUP_ENDPOINT="auth/signup"
-VITE_LOGIN_ENDPOINT="auth/login"
-VITE_LOGOUT_ENDPOINT="auth/logout"
-VITE_AUTHSTATUS_ENDPOINT="auth/checkStatus"
-VITE_FORGET_PASSWORD_ENDPOINT="auth/forgot-password"
-VITE_RESET_PASSWORD_ENDPOINT="auth/reset-password"
-VITE_VERIFY_OTP_ENDPOINT="auth/verify-otp"
-VITE_RESEND_OTP_ENDPOINT="auth/resend-otp"
+VITE_API_BASE_URL="http://localhost:3000"
+VITE_SIGNUP_ENDPOINT="/api/auth/signup"
+VITE_LOGIN_ENDPOINT="/api/auth/login"
+VITE_LOGOUT_ENDPOINT="/api/auth/logout"
+VITE_AUTHSTATUS_ENDPOINT="/api/auth/checkStatus"
+VITE_FORGET_PASSWORD_ENDPOINT="/api/auth/forgot-password"
+VITE_RESET_PASSWORD_ENDPOINT="/api/auth/reset-password"
+VITE_VERIFY_OTP_ENDPOINT="/api/auth/verify-otp"
+VITE_RESEND_OTP_ENDPOINT="/api/auth/resend-otp"
